RESOLVED FIXED258207
Fix scrollbar-gutter invalidation
https://bugs.webkit.org/show_bug.cgi?id=258207
Summary Fix scrollbar-gutter invalidation
Luke Warlow
Reported 2023-06-16 07:35:37 PDT
Currently scrollbar-gutter doesn't work dynamically, this will fix that.
Attachments
Luke Warlow
Comment 1 2023-06-16 07:49:58 PDT
EWS
Comment 2 2023-06-16 12:02:20 PDT
Committed 265254@main (b703b067b883): <https://commits.webkit.org/265254@main> Reviewed commits have been landed. Closing PR #15051 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-06-16 12:03:17 PDT
Note You need to log in before you can comment on or make changes to this bug.