Fix scrollbar-gutter invalidation https://bugs.webkit.org/show_bug.cgi?id=258207

Reviewed by Tim Nguyen.

Add diff check for scrollbarGutter to RenderStyle rareDataChangeRequiresLayout.

* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollbar-gutter-dynamic-002-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollbar-gutter-dynamic-002-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollbar-gutter-dynamic-002.html: Added.
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::rareDataChangeRequiresLayout):

Canonical link: https://commits.webkit.org/265254@main